Edit doc, good dozen and plots

--- a/notebook/Detailed_Research.ipynb
+++ b/notebook/Detailed_Research.ipynb
@@ -63,26 +63,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Attività "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/to_be_scored/\")\n",
     "path_disinform = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/csv/\")\n",
-    "path_large_files = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/ccdh/\")"
+    "path_large_files = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_verified = [\"DrDenaGrayson\", \"MackayIM\", \"DrEricDing\", \"IlonaKickbusch\", \"ashishkjha\", \n",
     "                 \"HelenBranswell\", \"mlipsitch\", \"trvrb\", \"kakape\", \"edyong209\", \"CDCDirector\",\n",
     "                \"DrTedros\"]\n",
-    "# df = pd.read_csv(path_large_files[0] + \"ccdh_merged_tweets_w_dates.csv\")"
+    "df = pd.read_csv(path_large_files[0] + \"ccdh/ccdh_merged_tweets_w_dates.csv\")\n",
+    "df_v = pd.read_csv(path_large_files[0] + \"verified_tweets.csv\")"
    ]
   },
   {
@@ -356,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -426,6 +436,116 @@
     "x = retweet[retweet[\"screen_name\"].isin(list(disinform[\"screen_name\"]))]\n",
     "x"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Timeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_users_verified_info = df_v[df_v[\"user_screen_name\"].isin(file_verified)]\n",
+    "df_users_verified_info[\"created_at\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = df_users_verified_info[\"created_at\"].dropna()\n",
+    "dates_formatted = []\n",
+    "for i in dates:\n",
+    "    x = i.split()[0]\n",
+    "    if(\"2\" in x):\n",
+    "        dates_formatted.append(x)\n",
+    "    else:\n",
+    "        y = tweets_utils.process_datetime(i)\n",
+    "        dates_formatted.append(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.histogram(dates_formatted)\n",
+    "fig.update_layout(\n",
+    "    title_text='Daily tweets from 12 \"good users\"', # title of plot\n",
+    "    xaxis_title_text='Tweet', # xaxis label\n",
+    "    yaxis_title_text='Count', # yaxis label\n",
+    "    bargap=0.1, # gap between bars of adjacent location coordinates\n",
+    "    bargroupgap=0.1 # gap between bars of the same location coordinates\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = df[\"created_at\"].dropna()\n",
+    "dates_formatted = []\n",
+    "for i in dates:\n",
+    "    x = i.split()[0]\n",
+    "    if(\"2\" in x):\n",
+    "        dates_formatted.append(x)\n",
+    "    else:\n",
+    "        y = tweets_utils.process_datetime(i)\n",
+    "        dates_formatted.append(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = []\n",
+    "list_data = [\"2020-01\", \"2020-02\", \"2020-03\", \"2020-04\", \"2020-05\"]\n",
+    "for i in dates_formatted:\n",
+    "    z1 = i.split(\"-\")[0]\n",
+    "    z2 = i.split(\"-\")[1]\n",
+    "    z = z1 + \"-\" + z2\n",
+    "    if (z in list_data):\n",
+    "        val.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig = px.histogram(val)\n",
+    "fig.update_layout(\n",
+    "    title_text='Daily tweets from Dozen', # title of plot\n",
+    "    xaxis_title_text='Tweet', # xaxis label\n",
+    "    yaxis_title_text='Count', # yaxis label\n",
+    "    bargap=0.1, # gap between bars of adjacent location coordinates\n",
+    "    bargroupgap=0.1 # gap between bars of the same location coordinates\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
