--- a/notebook/Retweet_Network.ipynb
+++ b/notebook/Retweet_Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +193,8 @@
     "    Type: DiGraph\n",
     "    Number of nodes: 12513502\n",
     "    Number of edges: 40027282\n",
-    "    Average in degree:   3.1987\n",
-    "    Average out degree:   3.1987\n",
+    "    Average in degree: 3.1987\n",
+    "    Average out degree: 3.1987\n",
     "    \n",
     "</p>"
    ]
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        " 'C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network\\\\out_degree.json']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        " 'C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/rt_network\\\\louvain_communities.json']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  27.764523400000144\n"
+      "Time:  35.61236400000007\n"
      ]
     }
    ],
@@ -275,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  57.563274699999965\n"
+      "Time:  63.79663199999982\n"
      ]
     }
    ],
@@ -297,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  74.04368610000006\n"
+      "Time:  203.75337009999998\n"
      ]
     }
    ],
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  3.2597128999998404\n"
+      "Time:  3.057021000000077\n"
      ]
     }
    ],
@@ -341,14 +341,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  15.066599400000996\n"
+      "Time:  21.64057580000008\n"
      ]
     }
    ],
@@ -383,28 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/ccdh/']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "path_ccdh = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/ccdh/\")\n",
-    "path_ccdh"
+    "path_disinform = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/csv/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,27 +411,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19333"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(ccdh_rt_flt)"
+    "total_users = len(louvain)\n",
+    "total_rt_ccdh = len(ccdh_rt)\n",
+    "found = len(ccdh_rt_flt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cont = 0\n",
+    "for i in louvain:\n",
+    "    if(louvain.get(i) == 2):\n",
+    "        cont = cont + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -466,107 +458,218 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_screen_name</th>\n",
-       "      <th>rt_number</th>\n",
+       "      <th>screen_name</th>\n",
+       "      <th>status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>IFilonczuk</td>\n",
-       "      <td>555</td>\n",
+       "      <td>mercola</td>\n",
+       "      <td>active</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RobertKennedyJr</td>\n",
+       "      <td>active</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>gnoBREAKTHROUGH</td>\n",
-       "      <td>349</td>\n",
+       "      <td>TyCharleneB</td>\n",
+       "      <td>removed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>GiancanaSonny</td>\n",
-       "      <td>220</td>\n",
+       "      <td>BusyDrT</td>\n",
+       "      <td>suspended</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IslamRizza</td>\n",
+       "      <td>removed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>CharismaAlasta1</td>\n",
-       "      <td>207</td>\n",
+       "      <td>DrButtar</td>\n",
+       "      <td>active</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>angrynationalis</td>\n",
-       "      <td>200</td>\n",
+       "      <td>unhealthytruth</td>\n",
+       "      <td>active</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>7</th>\n",
+       "      <td>sayerjigmi</td>\n",
+       "      <td>active</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39860</th>\n",
-       "      <td>CoadyMacQuarri1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>8</th>\n",
+       "      <td>KellyBroganMD</td>\n",
+       "      <td>active</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39861</th>\n",
-       "      <td>Nomad0073</td>\n",
-       "      <td>1</td>\n",
+       "      <th>9</th>\n",
+       "      <td>DrChrisNorthrup</td>\n",
+       "      <td>active</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39867</th>\n",
-       "      <td>FrGeezer</td>\n",
-       "      <td>1</td>\n",
+       "      <th>10</th>\n",
+       "      <td>DrBenTapper1</td>\n",
+       "      <td>suspended</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39868</th>\n",
-       "      <td>HolyRomanCatho1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39874</th>\n",
-       "      <td>AquarianQueen11</td>\n",
-       "      <td>1</td>\n",
+       "      <th>11</th>\n",
+       "      <td>kevdjenkins1</td>\n",
+       "      <td>active</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19333 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      user_screen_name  rt_number\n",
-       "0           IFilonczuk        555\n",
-       "2      gnoBREAKTHROUGH        349\n",
-       "3        GiancanaSonny        220\n",
-       "5      CharismaAlasta1        207\n",
-       "6      angrynationalis        200\n",
-       "...                ...        ...\n",
-       "39860  CoadyMacQuarri1          1\n",
-       "39861        Nomad0073          1\n",
-       "39867         FrGeezer          1\n",
-       "39868  HolyRomanCatho1          1\n",
-       "39874  AquarianQueen11          1\n",
-       "\n",
-       "[19333 rows x 2 columns]"
+       "        screen_name     status\n",
+       "0           mercola     active\n",
+       "1   RobertKennedyJr     active\n",
+       "2       TyCharleneB    removed\n",
+       "3           BusyDrT  suspended\n",
+       "4        IslamRizza    removed\n",
+       "5          DrButtar     active\n",
+       "6    unhealthytruth     active\n",
+       "7        sayerjigmi     active\n",
+       "8     KellyBroganMD     active\n",
+       "9   DrChrisNorthrup     active\n",
+       "10     DrBenTapper1  suspended\n",
+       "11     kevdjenkins1     active"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ccdh_rt_flt"
+    "disinform = pd.read_csv(path_disinform[0] + \"disinformation_users.csv\")\n",
+    "disinform"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  8.939250599998559\n"
+      "unhealthytruth\n",
+      "2\n",
+      "BusyDrT\n",
+      "2\n",
+      "RobertKennedyJr\n",
+      "2\n",
+      "mercola\n",
+      "2\n",
+      "kevdjenkins1\n",
+      "2\n",
+      "DrChrisNorthrup\n",
+      "2\n",
+      "DrButtar\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in louvain:\n",
+    "    if i in list(disinform[\"screen_name\"]):\n",
+    "        print(i)\n",
+    "        print(louvain.get(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trvrb\n",
+      "2\n",
+      "CDCDirector\n",
+      "2\n",
+      "MackayIM\n",
+      "2\n",
+      "DrTedros\n",
+      "19\n",
+      "IlonaKickbusch\n",
+      "2\n",
+      "DrEricDing\n",
+      "2\n",
+      "kakape\n",
+      "2\n",
+      "DrDenaGrayson\n",
+      "1\n",
+      "ashishkjha\n",
+      "1\n",
+      "mlipsitch\n",
+      "2\n",
+      "edyong209\n",
+      "1\n",
+      "HelenBranswell\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_verified = [\"DrDenaGrayson\", \"MackayIM\", \"DrEricDing\", \"IlonaKickbusch\", \"ashishkjha\", \n",
+    "                 \"HelenBranswell\", \"mlipsitch\", \"trvrb\", \"kakape\", \"edyong209\", \"CDCDirector\",\n",
+    "                \"DrTedros\"]\n",
+    "for i in louvain:\n",
+    "    if i in list(file_verified):\n",
+    "        print(i)\n",
+    "        print(louvain.get(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utenti che retweettano i Dozen presenti nella Network: 48.48%\n",
+      "Che rappresentano il: 0.15% della network\n",
+      "e rappresentano il: 1.86% della Community numero 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Utenti che retweettano i Dozen presenti nella Network: {round((found/total_rt_ccdh)*100,2)}%\")\n",
+    "print(f\"Che rappresentano il: {round((found/total_users)*100,2)}% della network\")\n",
+    "print(f\"e rappresentano il: {round((found/cont)*100,2)}% della Community numero 2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time:  0.07087520000004588\n"
      ]
     }
    ],
@@ -582,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -596,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
