Start subnetworks study

--- a/notebook/Retweet_Network.ipynb
+++ b/notebook/Retweet_Network.ipynb
@@ -56,17 +56,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- interazioni con le altre community\n",
-    "- **(done)** se i dozen ne fanno parte \n",
-    "- caratterizzazione community\n",
-    "- prendi rt di un gruppo e vedi quanti hanno come altro nodo della rete un gruppo all'interno della propria community\n",
-    "    - prime 5, caratterizza (community seguaci, community alto verified, ...)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Indice\n",
     "\n",
     "- [Network Script](#script)\n",
@@ -949,7 +938,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -982,6 +973,50 @@
     "ax.set_title(\"Community 2\")\n",
     "ax"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write communities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/network/_5\n",
+      "C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/network/_0\n",
+      "C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/network/_1\n",
+      "C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/network/_2\n",
+      "C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/network/_19\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/network/\")\n",
+    "list_comm = [5,0,1,2,19]\n",
+    "for i in range(len(list_comm)):\n",
+    "    comm = []\n",
+    "    for j in louvain:\n",
+    "        if(louvain.get(j) == i):\n",
+    "            comm.append(j)\n",
+    "    df = pd.DataFrame(comm, columns = [\"name\"])\n",
+    "    df.to_csv(f'{filename[0]}_{list_comm[i]}.csv', index=False)\n",
+    "    print(f'{filename[0]}_{list_comm[i]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
