--- a/notebook/Dozen_Comparison.ipynb
+++ b/notebook/Dozen_Comparison.ipynb
@@ -67,12 +67,14 @@
     "   - [Link shared](#link_sh)\n",
     "   - [Comparison hashtag](#comp_hashtag)\n",
     "   - [Credibility comparison](#cred_comp)\n",
-    "   - [Interaction check](#interaction)"
+    "   - [Interaction check](#interaction)\n",
+    "   - [Reply investigation](#reply_inv)\n",
+    "   - [File Botometer](#bom)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2826,7 +2828,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reply investigation"
+    "# Reply investigation\n",
+    "<a id=\"reply_inv\"/>"
    ]
   },
   {
@@ -2891,6 +2894,223 @@
     "print(f\"Good dozen internal replies are {round(len_internal_reply/len_total_reply,4)*100}% of total\")\n",
     "print(f\"Good dozen self-replies are {round(value/len_total_reply,4)*100}% of total\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File Botometer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1 = pd.read_csv(path[0] + \"rt_good.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x2 = pd.read_csv(path[0] + \"retweet_users_ccdh.csv\", usecols=[\"user_screen_name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "same = x2[x2[\"user_screen_name\"].isin(x[\"user_screen_name\"])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/to_be_scored/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = glob.glob(path + \"/*.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>screen_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>matomecorona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TomthunkitsMind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Host24Space</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CoronaVirusNFO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dooiz1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>TOIDelhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>LauraSmithCrewe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>mstewart_23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>nickmangwana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>minimusofmimi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           screen_name\n",
+       "0         matomecorona\n",
+       "1      TomthunkitsMind\n",
+       "2          Host24Space\n",
+       "3       CoronaVirusNFO\n",
+       "4               Dooiz1\n",
+       "...                ...\n",
+       "99995         TOIDelhi\n",
+       "99996  LauraSmithCrewe\n",
+       "99997      mstewart_23\n",
+       "99998     nickmangwana\n",
+       "99999    minimusofmimi\n",
+       "\n",
+       "[100000 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "for i in path:\n",
+    "    df = df.append(pd.read_csv(i, usecols=[\"screen_name\"]))\n",
+    "df = df.reset_index(drop = True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(subset =\"screen_name\", keep = False, inplace = True)\n",
+    "df = df.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = diff.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tbs_good = x[~x[\"user_screen_name\"].isin(df[\"screen_name\"])]\n",
+    "df_tbs_bad = x2[~x2[\"user_screen_name\"].isin(df[\"screen_name\"])]\n",
+    "df_tbs_same = same[~same[\"user_screen_name\"].isin(df[\"screen_name\"])]\n",
+    "df_tbs_good = df_tbs_good.reset_index(drop = True)\n",
+    "df_tbs_bad = df_tbs_bad.reset_index(drop = True)\n",
+    "df_tbs_same = df_tbs_same.reset_index(drop = True)\n",
+    "path_tbs = \"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/to_be_scored/\"\n",
+    "df_tbs_good.to_csv(path_tbs + \"good_rt.csv\", index = False, encoding=\"utf-8\", line_terminator=\"\\n\")\n",
+    "df_tbs_bad.to_csv(path_tbs + \"bad_rt.csv\", index = False, encoding=\"utf-8\", line_terminator=\"\\n\")\n",
+    "df_tbs_same.to_csv(path_tbs + \"same_rt.csv\", index = False, encoding=\"utf-8\", line_terminator=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_tbs = \"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/to_be_scored/\"\n",
+    "df_tbs_good.to_csv(path_tbs + \"good_rt.csv\", index = False, encoding=\"utf-8\", line_terminator=\"\\n\")\n",
+    "df_tbs_bad.to_csv(path_tbs + \"bad_rt.csv\", index = False, encoding=\"utf-8\", line_terminator=\"\\n\")\n",
+    "df_tbs_same.to_csv(path_tbs + \"same_rt.csv\", index = False, encoding=\"utf-8\", line_terminator=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
