--- a/notebook/Retweet_Network.ipynb
+++ b/notebook/Retweet_Network.ipynb
@@ -147,7 +147,6 @@
    "metadata": {},
    "source": [
     "### Nx info\n",
-    "<a id=\"info\"/>\n",
     "<p>\n",
     "    \n",
     "    Type: DiGraph\n",
@@ -156,7 +155,8 @@
     "    Average in degree: 3.1987\n",
     "    Average out degree: 3.1987\n",
     "    \n",
-    "</p>"
+    "</p>\n",
+    "<a id=\"info\"/>\n"
    ]
   },
   {
@@ -267,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  24.72470949999979\n"
+      "Time:  12.317874799999998\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,6 +418,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74231"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ccdh_rt_flt)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -427,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +455,8 @@
      "output_type": "stream",
      "text": [
       "La community 2 contiene il 65.2% degli utenti presenti nella network\n",
-      "48402\n"
+      "48402\n",
+      "7156\n"
      ]
     },
     {
@@ -468,6 +489,7 @@
     "ax.invert_yaxis()\n",
     "print(f\"La community 2 contiene il {round(val[2] / sum(val),4)*100}% degli utenti presenti nella network\")\n",
     "print(val[2])\n",
+    "print(val[1])\n",
     "\n",
     "plt.show()"
    ]
@@ -1030,6 +1052,127 @@
     "    df = pd.DataFrame(comm, columns = [\"name\"])\n",
     "    df.to_csv(f'{filename[0]}_{list_comm[i]}.csv', index=False)\n",
     "    print(f'{filename[0]}_{list_comm[i]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comm = []\n",
+    "filename = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/network/\")\n",
+    "\n",
+    "for i in louvain:\n",
+    "    if(louvain.get(i) == 19):\n",
+    "        comm.append(i)\n",
+    "df = pd.DataFrame(comm, columns = [\"name\"])\n",
+    "df.to_csv(filename[0] + 'prova_19.csv', index=False, encoding=\"utf-8\", line_terminator=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nursebiode</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>meteoriteproje4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KEMRI_Kenya</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>pleposo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fancy_frannie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607290</th>\n",
+       "      <td>DuzFirr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607291</th>\n",
+       "      <td>arcemmanuel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607292</th>\n",
+       "      <td>crispyCT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607293</th>\n",
+       "      <td>itzbondraph</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607294</th>\n",
+       "      <td>AlexOriprite</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>607295 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   name\n",
+       "0            Nursebiode\n",
+       "1       meteoriteproje4\n",
+       "2           KEMRI_Kenya\n",
+       "3               pleposo\n",
+       "4         fancy_frannie\n",
+       "...                 ...\n",
+       "607290          DuzFirr\n",
+       "607291      arcemmanuel\n",
+       "607292         crispyCT\n",
+       "607293      itzbondraph\n",
+       "607294     AlexOriprite\n",
+       "\n",
+       "[607295 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
