--- a/notebook/Subnetworks.ipynb
+++ b/notebook/Subnetworks.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,49 +212,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "path_ccdh_rt = glob.glob(\"C:/Users/Gianluca/Desktop/Supsi/Git/BachelorProject/large_files/ccdh/\")\n",
-    "ccdh_rt = pd.read_csv(path_ccdh_rt[0] + \"retweet_users_ccdh.csv\")\n",
+    "ccdh_rt = pd.read_csv(path_ccdh_rt[0] + \"disinformation_users.csv\")\n",
     "good_rt = pd.read_csv(path_ccdh_rt[0] + \"rt_good.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_1 = pd.read_csv(path + \"_1.csv\", lineterminator=\"\\n\", low_memory=False)\n",
-    "# df_1 = clean_data_format(df_1)\n",
-    "# df_2 = pd.read_csv(path + \"_2.csv\", lineterminator=\"\\n\", low_memory=False)\n",
-    "# df_2 = clean_data_format(df_2)\n",
-    "# df_5 = pd.read_csv(path + \"_5.csv\", lineterminator=\"\\n\", low_memory=False)\n",
-    "# df_5 = clean_data_format(df_5)\n",
-    "# df_19 = pd.read_csv(path + \"_19.csv\", lineterminator=\"\\n\", low_memory=False)\n",
-    "# df_19 = clean_data_format(df_19)"
+    "# df_1 = pd.read_csv(path + \"prova_1.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "# df_1\n",
+    "# df_2 = pd.read_csv(path + \"prova_2.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "# df_2\n",
+    "# df_5 = pd.read_csv(path + \"prova_5.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "# df_5 \n",
+    "# df_19 = pd.read_csv(path + \"prova_19.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "# df_19 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process 19\n"
+     ]
+    }
+   ],
    "source": [
-    "# n = 0\n",
-    "# value = [\"1\", \"2\", \"5\", \"19\"]\n",
-    "# dfs = [df_1, df_2, df_5, df_19]\n",
-    "# for i in range(len(value)):\n",
-    "#     nt = pd.DataFrame()\n",
-    "#     print(f\"Process {value[i]}\")\n",
-    "#     for chunk in pd.read_csv(path + \"user_rtuser.csv\", lineterminator=\"\\n\", \n",
-    "#                              low_memory=False, chunksize=int(1e6)):\n",
-    "#         chunk = clean_data_format(chunk, \"rt_name\")\n",
-    "#         nt = nt.append(chunk[chunk[\"name\"].isin(dfs[i][\"name\"]) | chunk[\"rt_name\"].isin(dfs[i][\"name\"])])\n",
-    "#     nt = nt.reset_index(drop=True)\n",
-    "#     nt.to_csv(path + f\"nt_{value[i]}.csv\", line_terminator='\\n', encoding='utf-8', index=False)"
+    "# nt = pd.DataFrame()\n",
+    "# print(f\"Process 19\")\n",
+    "# for chunk in pd.read_csv(path + \"user_rtuser.csv\", lineterminator=\"\\n\", \n",
+    "#                          low_memory=False, chunksize=int(1e6)):\n",
+    "#     chunk = clean_data_format(chunk, \"rt_name\")\n",
+    "#     nt = nt.append(chunk[chunk[\"name\"].isin(df_19[\"name\"]) | chunk[\"rt_name\"].isin(df_19[\"name\"])])\n",
+    "# nt = nt.reset_index(drop=True)\n",
+    "# nt.to_csv(path + f\"prova_nt_19.csv\", line_terminator='\\n', encoding='utf-8', index=False)"
    ]
   },
   {
@@ -274,9 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time:  1.2859998999999789\n"
+     ]
+    }
+   ],
    "source": [
     "path_inside = path + \"/network_1/\"\n",
     "louvain_path = glob.glob(path_inside + \"louvain*.json\")[0]\n",
@@ -320,22 +332,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153552\n",
+      "60673\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1729679"
+       "23097"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(louvain_1)"
+    "print(len(ccdh_rt))\n",
+    "print(len(ccdh_rt_flt_1))\n",
+    "len(good_rt_flt_1)"
    ]
   },
   {
