--- a/notebook/Retweet_Network.ipynb
+++ b/notebook/Retweet_Network.ipynb
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  28.376254200000403\n"
+      "Time:  29.89199819999999\n"
      ]
     }
    ],
@@ -288,24 +288,232 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### write users contained into rt_network"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nt = glob.glob(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/network/names/\")\n",
+    "# users = pd.Series(louvain.keys())\n",
+    "# users = users.unique()\n",
+    "# df_network = pd.DataFrame(users, columns=['user_screen_name'])\n",
+    "# df_network.to_csv(path_nt[0] + \"network_users.csv\", index=False, encoding='utf-8', line_terminator='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Huerconetzin\n",
-      "0\n"
+      "1 done...\n",
+      "2 done...\n",
+      "19 done...\n"
      ]
     }
    ],
    "source": [
-    "for i in louvain:\n",
-    "    print(i)\n",
-    "    print(louvain.get(i))\n",
-    "    break"
+    "communities = [1,2,19]\n",
+    "for j in communities:\n",
+    "    lst = []\n",
+    "    df_name = pd.DataFrame()\n",
+    "    for i in louvain:\n",
+    "        if(louvain.get(i) == j):\n",
+    "            lst.append(i)\n",
+    "    df_name = pd.DataFrame(lst, columns=['user_screen_name'])\n",
+    "    df_name.to_csv(path_nt[0] + f\"names_{j}.csv\", index=False, encoding='utf-8', line_terminator='\\n')\n",
+    "    print(f\"{j} done...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>rt_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Huerconetzin</td>\n",
+       "      <td>AnneKPIX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JustAnotherAme4</td>\n",
+       "      <td>cnni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HHSRegion8</td>\n",
+       "      <td>CDCgov</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Paxman42</td>\n",
+       "      <td>OurWarOnCancer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>beerhowell</td>\n",
+       "      <td>nytimes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48312499</th>\n",
+       "      <td>Dinora21971394</td>\n",
+       "      <td>saludhn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48312500</th>\n",
+       "      <td>EllyJonkerVliet</td>\n",
+       "      <td>StopEcocideNL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48312501</th>\n",
+       "      <td>anna76746180</td>\n",
+       "      <td>Haggis_UK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48312502</th>\n",
+       "      <td>SueHealy16</td>\n",
+       "      <td>Auchindrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48312503</th>\n",
+       "      <td>inquisitor111</td>\n",
+       "      <td>StagecoachBBird</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>48312504 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     name          rt_name\n",
+       "0            Huerconetzin         AnneKPIX\n",
+       "1         JustAnotherAme4             cnni\n",
+       "2              HHSRegion8           CDCgov\n",
+       "3                Paxman42   OurWarOnCancer\n",
+       "4              beerhowell          nytimes\n",
+       "...                   ...              ...\n",
+       "48312499   Dinora21971394          saludhn\n",
+       "48312500  EllyJonkerVliet    StopEcocideNL\n",
+       "48312501     anna76746180        Haggis_UK\n",
+       "48312502       SueHealy16      Auchindrain\n",
+       "48312503    inquisitor111  StagecoachBBird\n",
+       "\n",
+       "[48312504 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_rtuser = pd.read_csv(path_nt[0] + \"user_rt_user.csv\", low_memory=False, lineterminator='\\n')\n",
+    "user_rtuser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[df['A'].isin([1, 3]) & df['B'].isin([4, 7, 12])]\n",
+    "# 7876070\n",
+    "new_df\n",
+    "# new_df_3 = new_df[new_df.rt_name.isin(names)]\n",
+    "# new_df_3 = new_df_3.reset_index(drop=True) \n",
+    "# new_df_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start communities loop\n",
+      "start big iteration\n",
+      "0\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9364/1110285856.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mlst_rt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"start big iteration\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst_iter_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m10000\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "print(\"start communities loop\")\n",
+    "for j in communities:\n",
+    "    df_names = pd.read_csv(path_nt[0] + f\"names_{j}.csv\", low_memory=False, lineterminator=\"\\n\")\n",
+    "    names = list(df_names[\"user_screen_name\"])\n",
+    "    new_df = user_rtuser[user_rtuser.name.isin(names)]\n",
+    "    new_df2 = new_df[new_df.rt_name.isin(names)]\n",
+    "    lst_iter_t = tuple(new_df2[\"name\"])\n",
+    "    lst_iter_rt = tuple(new_df2[\"rt_name\"])\n",
+    "    lst_t = []\n",
+    "    lst_rt = []\n",
+    "    print(\"start big iteration\")\n",
+    "    for i in range(len(lst_iter_t)):\n",
+    "        if i % 10000 == 0:\n",
+    "            print(i)\n",
+    "        if (lst_iter_t[i] in names) and (lst_iter_rt[i] in names) == True:\n",
+    "            lst_t.append(lst_iter_t[i])\n",
+    "            lst_rt.append(lst_iter_rt[i])\n",
+    "    df = pd.DataFrame(list(zip(lst_t, lst_rt)), columns =['name', 'rt_name'])\n",
+    "    df.to_csv(path_nt[0] + f\"rt_nt_{j}.csv\", line_terminator='\\n', encoding='utf-8')\n",
+    "    print(f\"community {j} done ...\")"
    ]
   },
   {
