Start new study (suspended)

--- a/notebook/Subnetworks.ipynb
+++ b/notebook/Subnetworks.ipynb
@@ -353,11 +353,7 @@
    "source": [
     "<p>\n",
     "    \n",
-    "    Type: Graph\n",
-    "    Number of nodes: 1800304\n",
-    "    Number of edges: 8331794\n",
-    "    Average degree:   9.2560\n",
-    "\n",
+    "    Graph with 1142470 nodes and 6309017 edges\n",
     "\n",
     "</p>"
    ]
