--- a/notebook/Retweet_Network.ipynb
+++ b/notebook/Retweet_Network.ipynb
@@ -37,7 +37,6 @@
     "import logging\n",
     "import importlib\n",
     "import json\n",
-    "# from tabulate import tabulate\n",
     "# import networkx as nx\n",
     "import seaborn as sns\n",
     "# import re\n",
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -443,58 +442,53 @@
        "[48312504 rows x 2 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "user_rtuser = pd.read_csv(path_nt[0] + \"user_rt_user.csv\", low_memory=False, lineterminator='\\n')\n",
+    "# user_rtuser = pd.read_csv(path_nt[0] + \"user_rtuser.csv\", low_memory=False, lineterminator='\\n')\n",
     "user_rtuser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df[df['A'].isin([1, 3]) & df['B'].isin([4, 7, 12])]\n",
-    "# 7876070\n",
-    "new_df\n",
-    "# new_df_3 = new_df[new_df.rt_name.isin(names)]\n",
-    "# new_df_3 = new_df_3.reset_index(drop=True) \n",
-    "# new_df_3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start communities loop\n",
-      "start big iteration\n",
-      "0\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9364/1110285856.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mlst_rt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"start big iteration\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst_iter_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m10000\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Paxman42\n"
      ]
     }
    ],
    "source": [
-    "print(\"start communities loop\")\n",
+    "for i in lst:\n",
+    "    print(i[0])   break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "community 1 done ...\n",
+      "community 2 done ...\n",
+      "community 19 done ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "communities = [1,2,19]\n",
     "for j in communities:\n",
     "    df_names = pd.read_csv(path_nt[0] + f\"names_{j}.csv\", low_memory=False, lineterminator=\"\\n\")\n",
     "    names = list(df_names[\"user_screen_name\"])\n",
@@ -502,17 +496,8 @@
     "    new_df2 = new_df[new_df.rt_name.isin(names)]\n",
     "    lst_iter_t = tuple(new_df2[\"name\"])\n",
     "    lst_iter_rt = tuple(new_df2[\"rt_name\"])\n",
-    "    lst_t = []\n",
-    "    lst_rt = []\n",
-    "    print(\"start big iteration\")\n",
-    "    for i in range(len(lst_iter_t)):\n",
-    "        if i % 10000 == 0:\n",
-    "            print(i)\n",
-    "        if (lst_iter_t[i] in names) and (lst_iter_rt[i] in names) == True:\n",
-    "            lst_t.append(lst_iter_t[i])\n",
-    "            lst_rt.append(lst_iter_rt[i])\n",
-    "    df = pd.DataFrame(list(zip(lst_t, lst_rt)), columns =['name', 'rt_name'])\n",
-    "    df.to_csv(path_nt[0] + f\"rt_nt_{j}.csv\", line_terminator='\\n', encoding='utf-8')\n",
+    "    df = pd.DataFrame(list(zip(lst_iter_t, lst_iter_rt)), columns =['name', 'rt_name'])\n",
+    "    df.to_csv(path_nt[0] + f\"rt_nt_{j}.csv\", line_terminator='\\n', encoding='utf-8', index=False)\n",
     "    print(f\"community {j} done ...\")"
    ]
   },
